--- a/.github/workflows/release-development.yaml
+++ b/.github/workflows/release-development.yaml
@@ -8,6 +8,7 @@ permissions:
 jobs:
   build-backend:
     runs-on: ubuntu-latest
+    environment: development
     steps:
       # checkout the repo
       - name: 'Checkout GitHub Action'
