--- a/.github/workflows/release-development.yaml
+++ b/.github/workflows/release-development.yaml
@@ -34,4 +34,5 @@ jobs:
         with:
           tags: ${{ secrets.ECR_LOGIN_SERVER }}/expense-lens-service:${{ github.sha }}
           push: true
-          file: src/BackendService/Dockerfile
+          directory: src/BackendService
+          file: Dockerfile
