--- a/.github/workflows/release-development.yaml
+++ b/.github/workflows/release-development.yaml
@@ -9,10 +9,13 @@ jobs:
   build-backend:
     runs-on: ubuntu-latest
     environment: development
+    defaults:
+      run:
+        shell: bash
     steps:
       # checkout the repo
       - name: 'Checkout GitHub Action'
-        uses: actions/checkout@main
+        uses: actions/checkout@v4
 
       - name: OIDC Login to Azure Public Cloud with AzPowershell (enableAzPSSession true)
         uses: azure/login@v1
@@ -22,7 +25,7 @@ jobs:
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           enable-AzPSSession: true
 
-      - name: 'Build and push image'
+      - name: Docker login
         uses: azure/docker-login@v1
         with:
           login-server: ${{ secrets.ECR_LOGIN_SERVER }}
