--- a/.github/workflows/release-development.yaml
+++ b/.github/workflows/release-development.yaml
@@ -37,4 +37,4 @@ jobs:
         with:
           tags: ${{ secrets.ECR_LOGIN_SERVER }}/expense-lens-service:${{ github.sha }}
           push: true
-          file: Dockerfile
+          context: .
