--- a/deploy/ExpenseLens/ExpenseLens.csproj
+++ b/deploy/ExpenseLens/ExpenseLens.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <RootNamespace>Deploy.ExpenseLens</RootNamespace>
     <AssemblyName>Deploy.ExpenseLens</AssemblyName>
@@ -11,6 +11,14 @@
   <ItemGroup>
     <PackageReference Include="Pulumi" Version="3.*" />
     <PackageReference Include="Pulumi.AzureNative" Version="2.*" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Functions\" />
   </ItemGroup>
 
 </Project>
