--- a/deploy/ExpenseLens/Pulumi.yaml
+++ b/deploy/ExpenseLens/Pulumi.yaml
@@ -4,4 +4,4 @@ description: Deploy ExpenseLens system
 config:
   pulumi:tags:
     value:
-      pulumi:template: azure-csharp
+      pulumi:template: ExpenseLens
