--- a/.github/workflows/release-development.yaml
+++ b/.github/workflows/release-development.yaml
@@ -6,7 +6,7 @@ permissions:
   contents: write
 
 jobs:
-  build-backend:
+  build-function:
     runs-on: ubuntu-latest
     environment: development
     defaults:
@@ -24,55 +24,22 @@ jobs:
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           enable-AzPSSession: true
 
-      - name: Docker login
-        uses: azure/docker-login@v1
-        with:
-          login-server: ${{ secrets.ECR_LOGIN_SERVER }}
-          username: ${{ secrets.ECR_USERNAME }}
-          password: ${{ secrets.ECR_PASSWORD }}
-
-      - name: Build & push Docker image
-        id: backend_image
-        uses: docker/build-push-action@v2
-        with:
-          tags: ${{ secrets.ECR_LOGIN_SERVER }}/expense-lens-service:${{ github.sha }}
-          push: true
-          context: .
-          file: ./Dockerfile_Backend
-
-  deploy:
-    runs-on: ubuntu-latest
-    environment: development
-    name: Deploy ExpenseLens to development
-    needs: [ build-backend ]
-    defaults:
-      run:
-        shell: bash
-    steps:
-      - name: 'Checkout GitHub Action'
-        uses: actions/checkout@v4
-
       - name: Setup dotnet
         uses: actions/setup-dotnet@v4
-
-      - name: OIDC Login to Azure Public Cloud with AzPowershell (enableAzPSSession true)
-        uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          enable-AzPSSession: true
+          dotnet-version: 8.x
+          cache: true
+          cache-dependency-path: '**/packages.lock.json'
 
-      - uses: pulumi/actions@v5.2.3
-        name: Deploy infrastructure to development
-        env:
-          BACKEND_SERVICE_IMAGE_TAG: ${{ secrets.ECR_LOGIN_SERVER }}/expense-lens-service:${{ github.sha }}
-          AZURE_STORAGE_ACCOUNT: ${{ secrets.PULUMI_AZURE_STORAGE_ACCOUNT }}
-          AZURE_STORAGE_KEY: ${{ secrets.PULUMI_AZURE_STORAGE_KEY }}
+      - name: Build Azure Function and Zip
+        run: |
+          dotnet build src/Functions/Functions.csproj ./publish /p:DeployOnBuild=true /p:DeployTarget=Package;CreatePackageOnPublish=true -c Release -o
+          cd publish
+          zip -r ../ExpenseLensFunctions.zip .
+
+      - name: Upload to storage using CLI
+        uses: azure/CLI@v1
         with:
-          command: up
-          stack-name: development
-          work-dir: deploy
-          cloud-url: azblob://development
-          suppress-outputs: true
-          suppress-progress: true
+          azcliversion: latest
+          inlineScript: |
+            az storage blob upload-batch --account-name ${{ env.FUNCTION_STORAGE_ACCOUNT_NAME }} -d 'function' -s ../ExpenseLensFunctions.zip
