Correct function build

--- a/.github/workflows/release-development.yaml
+++ b/.github/workflows/release-development.yaml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Build Azure Function and Zip
         run: |
-          dotnet build src/Functions/Functions.csproj -c Release -o ./publish -p:DeployOnBuild=true -p:DeployTarget=Package;CreatePackageOnPublish=true
+          dotnet build src/Functions/Functions.csproj -c Release -o ./publish -p:DeployOnBuild=true -p:'DeployTarget=Package;CreatePackageOnPublish=true'
           cd publish
           zip -r ../ExpenseLensFunctions.zip .
 
@@ -40,4 +40,4 @@ jobs:
         with:
           azcliversion: latest
           inlineScript: |
-            az storage blob upload-batch --account-name ${{ env.FUNCTION_STORAGE_ACCOUNT_NAME }} -d 'function' -s ../ExpenseLensFunctions.zip
+            az storage blob upload-batch --account-name ${{ secrets.FUNCTION_STORAGE_ACCOUNT_NAME }} -d 'function' -s ../ExpenseLensFunctions.zip
