Add function app

--- a/deploy/ExpenseLens/ExpenseLens.csproj
+++ b/deploy/ExpenseLens/ExpenseLens.csproj
@@ -9,16 +9,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Pulumi" Version="3.*" />
+    <PackageReference Include="Pulumi" Version="3.63.1" />
     <PackageReference Include="Pulumi.AzureNative" Version="2.*" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Functions\" />
   </ItemGroup>
 
 </Project>
