--- a/.github/workflows/release-development.yaml
+++ b/.github/workflows/release-development.yaml
@@ -13,7 +13,7 @@ jobs:
       deployment_environment: 'development'
       new_tag: ${{ steps.tag_version.outputs.new_tag }}
       new_version: ${{ steps.tag_version.outputs.new_version }}
-      backend_image_tag: ${{ secrets.ECR_LOGIN_SERVER }}/expense-lens-service::${{ steps.tag_version.outputs.new_version }}
+      backend_image_tag: ${{ secrets.ECR_LOGIN_SERVER }}/expense-lens-service:${{ steps.tag_version.outputs.new_version }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
