--- a/.github/workflows/release-development.yaml
+++ b/.github/workflows/release-development.yaml
@@ -5,6 +5,11 @@ permissions:
   id-token: write
   contents: write
 
+env:
+  AZURE_FUNCTIONAPP_NAME: 'expense-lens-function-app2c837d91'   # set this to your function app name on Azure
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.'       # set this to the path to your function app project, defaults to the repository root
+  DOTNET_VERSION: '8.0.x'                   # set this to the dotnet version to use (e.g. '2.1.x', '3.1.x', '5.0.x')
+
 jobs:
   prepare-variables:
     runs-on: ubuntu-latest
@@ -68,43 +73,32 @@ jobs:
           context: .
           file: ./Dockerfile_Backend
 
-  build-function:
-    needs: [prepare-variables]
-    runs-on: ubuntu-latest
+  build-and-deploy-function:
+    runs-on: windows-latest
     environment: ${{ needs.prepare-variables.outputs.deployment_environment }}
-    defaults:
-      run:
-        shell: bash
     steps:
       - name: 'Checkout GitHub Action'
         uses: actions/checkout@v4
 
-      - name: OIDC Login to Azure Public Cloud with AzPowershell (enableAzPSSession true)
-        uses: azure/login@v2.1.1
+      - name: Setup DotNet ${{ env.DOTNET_VERSION }} Environment
+        uses: actions/setup-dotnet@v3
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          enable-AzPSSession: true
+          dotnet-version: ${{ env.DOTNET_VERSION }}
 
-      - name: Setup dotnet
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: 8.x
-
-      - name: Build Azure Function and Zip
+      - name: 'Resolve Project Dependencies Using Dotnet'
+        shell: pwsh
         run: |
-          dotnet build src/Functions/Functions.csproj -c Release -o Publish -p:DeployOnBuild=true -p:'DeployTarget=Package;CreatePackageOnPublish=true'
-          cd Publish
-          zip -r ../ExpenseLensFunctions-${{ needs.prepare-variables.outputs.new_version }}.zip .
-          cd ..
+          pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
+          dotnet build src/Functions/Functions.csproj --configuration Release --output ./Publish
+          popd
 
-      - name: Upload to storage using CLI
-        uses: azure/CLI@v1
+      - name: 'Run Azure Functions Action'
+        uses: Azure/functions-action@v1
+        id: fa
         with:
-          azcliversion: latest
-          inlineScript: |
-            az storage blob upload-batch --account-name ${{ secrets.FUNCTION_STORAGE_ACCOUNT_NAME }} -d 'function' -s . --pattern "*.zip"
+          app-name: ${{ env.AZURE_FUNCTIONAPP_NAME }}
+          package: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/Publish'
+          publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
 
   deploy:
     runs-on: ubuntu-latest
