--- a/.github/workflows/release-development.yaml
+++ b/.github/workflows/release-development.yaml
@@ -100,41 +100,41 @@ jobs:
           package: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/Publish'
           publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
 
-  deploy:
-    runs-on: ubuntu-latest
-    environment: ${{ needs.prepare-variables.outputs.deployment_environment }}
-    name: Deploy ExpenseLens to development
-    needs: [ build-backend, build-function ]
-    defaults:
-      run:
-        shell: bash
-    env:
-      BACKEND_IMAGE_TAG: ${{ needs.prepare-variables.outputs.backend_image_tag }}
-    steps:
-      - name: 'Checkout GitHub Action'
-        uses: actions/checkout@v4
-
-      - name: Setup dotnet
-        uses: actions/setup-dotnet@v4
-
-      - name: OIDC Login to Azure Public Cloud with AzPowershell (enableAzPSSession true)
-        uses: azure/login@v2.1.1
-        with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          enable-AzPSSession: true
-
-      - uses: pulumi/actions@v5.2.3
-        name: Deploy infrastructure to development
-        env:
-          BACKEND_SERVICE_IMAGE_TAG: ${{ secrets.ECR_LOGIN_SERVER }}/expense-lens-service:${{ github.sha }}
-          AZURE_STORAGE_ACCOUNT: ${{ secrets.PULUMI_AZURE_STORAGE_ACCOUNT }}
-          AZURE_STORAGE_KEY: ${{ secrets.PULUMI_AZURE_STORAGE_KEY }}
-        with:
-          command: up
-          stack-name: development
-          work-dir: deploy
-          cloud-url: azblob://development
-          suppress-outputs: true
-          suppress-progress: true
+#  deploy-pulumi:
+#    runs-on: ubuntu-latest
+#    environment: ${{ needs.prepare-variables.outputs.deployment_environment }}
+#    name: Deploy ExpenseLens to development
+#    needs: [ build-backend, build-and-deploy-function ]
+#    defaults:
+#      run:
+#        shell: bash
+#    env:
+#      BACKEND_IMAGE_TAG: ${{ needs.prepare-variables.outputs.backend_image_tag }}
+#    steps:
+#      - name: 'Checkout GitHub Action'
+#        uses: actions/checkout@v4
+#
+#      - name: Setup dotnet
+#        uses: actions/setup-dotnet@v4
+#
+#      - name: OIDC Login to Azure Public Cloud with AzPowershell (enableAzPSSession true)
+#        uses: azure/login@v2.1.1
+#        with:
+#          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+#          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+#          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+#          enable-AzPSSession: true
+#
+#      - uses: pulumi/actions@v5.2.3
+#        name: Deploy infrastructure to development
+#        env:
+#          BACKEND_SERVICE_IMAGE_TAG: ${{ secrets.ECR_LOGIN_SERVER }}/expense-lens-service:${{ github.sha }}
+#          AZURE_STORAGE_ACCOUNT: ${{ secrets.PULUMI_AZURE_STORAGE_ACCOUNT }}
+#          AZURE_STORAGE_KEY: ${{ secrets.PULUMI_AZURE_STORAGE_KEY }}
+#        with:
+#          command: up
+#          stack-name: development
+#          work-dir: deploy
+#          cloud-url: azblob://development
+#          suppress-outputs: true
+#          suppress-progress: true
