--- a/.github/workflows/release-development.yaml
+++ b/.github/workflows/release-development.yaml
@@ -18,7 +18,7 @@ jobs:
       deployment_environment: 'development'
       new_tag: ${{ steps.tag_version.outputs.new_tag }}
       new_version: ${{ steps.tag_version.outputs.new_version }}
-      backend_image_tag: ${{ secrets.ECR_LOGIN_SERVER }}/expense-lens-service:v${{ steps.tag_version.outputs.new_version }}
+      backend_image_tag: ${{ secrets.ECR_LOGIN_SERVER }}/expense-lens-service:latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -84,7 +84,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup DotNet ${{ env.DOTNET_VERSION }} Environment
-        uses: actions/setup-dotnet@v3
+        uses: actions/setup-dotnet@v4
         with:
           dotnet-version: ${{ env.DOTNET_VERSION }}
 
