--- a/.github/workflows/release-development.yaml
+++ b/.github/workflows/release-development.yaml
@@ -18,7 +18,7 @@ jobs:
       deployment_environment: 'development'
       new_tag: ${{ steps.tag_version.outputs.new_tag }}
       new_version: ${{ steps.tag_version.outputs.new_version }}
-      backend_image_tag: ${{ secrets.ECR_LOGIN_SERVER }}/expense-lens-service:latest
+      backend_image_tag: expenselens.azurecr.io/expense-lens-service:latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
