--- a/.github/workflows/release-development.yaml
+++ b/.github/workflows/release-development.yaml
@@ -18,7 +18,6 @@ jobs:
       deployment_environment: 'development'
       new_tag: ${{ steps.tag_version.outputs.new_tag }}
       new_version: ${{ steps.tag_version.outputs.new_version }}
-      backend_image_tag: expenselens.azurecr.io/expense-lens-service:latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -47,7 +46,7 @@ jobs:
         shell: bash
     steps:
       - name: print backend_image_tag
-        run: echo "backend_image_tag = ${{ needs.prepare-variables.outputs.backend_image_tag }}"
+        run: echo "${{ secrets.ECR_LOGIN_SERVER }}/expense-lens-service:${{ needs.prepare-variables.outputs.new_tag }}"
 
       - name: 'Checkout GitHub Action'
         uses: actions/checkout@v4
@@ -71,7 +70,7 @@ jobs:
         id: backend_image
         uses: docker/build-push-action@v2
         with:
-          tags: ${{ needs.prepare-variables.outputs.backend_image_tag }}
+          tags: ${{ secrets.ECR_LOGIN_SERVER }}/expense-lens-service:${{ needs.prepare-variables.outputs.new_tag }}
           push: true
           context: .
           file: ./Dockerfile_Backend
