--- a/.github/workflows/release-development.yaml
+++ b/.github/workflows/release-development.yaml
@@ -102,9 +102,13 @@ jobs:
       - uses: pulumi/actions@v5.2.3
         name: Deploy infrastructure to development
         env:
-          BACKEND_SERVICE_IMAGE_TAG: ${{ secrets.ECR_LOGIN_SERVER }}/expense-lens-service:${{ github.sha }}
+          BACKEND_SERVICE_IMAGE_TAG: $BACKEND_IMAGE_TAG
           AZURE_STORAGE_ACCOUNT: ${{ secrets.PULUMI_AZURE_STORAGE_ACCOUNT }}
           AZURE_STORAGE_KEY: ${{ secrets.PULUMI_AZURE_STORAGE_KEY }}
+          ARM_USE_OIDC: true
+          ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+          ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+          ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
         with:
           command: up
           stack-name: organization/DeployExpenseLens/development
