--- a/.github/workflows/release-development.yaml
+++ b/.github/workflows/release-development.yaml
@@ -91,6 +91,14 @@ jobs:
       - name: Setup dotnet
         uses: actions/setup-dotnet@v4
 
+      - name: OIDC Login to Azure Public Cloud with AzPowershell (enableAzPSSession true)
+        uses: azure/login@v2.1.1
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          enable-AzPSSession: true
+
       - uses: pulumi/actions@v5.2.3
         name: Deploy infrastructure to development
         env:
@@ -117,7 +125,7 @@ jobs:
     steps:
       - name: print AZURE_FUNCTIONAPP_NAME
         run: echo "${{ vars.AZURE_FUNCTIONAPP_NAME }}"
-          
+
       - name: 'Checkout GitHub Action'
         uses: actions/checkout@v4
 
