--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,89 +1,47 @@
-name: Deploy ExpenseLens to development environment
-on: [push]
+name: Release ExpenseLens
+run-name: Release ExpenseLens to ${{ inputs.environment }} by ${{ github.actor }}
+on:
+  workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Which environment do you want to deploy to?'
+        required: true
+        default: 'development'
+        type: choice
+        options:
+          - development
+          - production
 
 permissions:
   id-token: write
   contents: write
 
-env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.'       # set this to the path to your function app project, defaults to the repository root
-  DOTNET_VERSION: '8.0.x'                   # set this to the dotnet version to use (e.g. '2.1.x', '3.1.x', '5.0.x')
-
 jobs:
   prepare-variables:
     runs-on: ubuntu-latest
     name: Prepare required variables
+    if: ${{ startsWith(github.ref, 'refs/tags/v') }}
     outputs:
-      deployment_environment: 'development'
-      new_tag: ${{ steps.tag_version.outputs.new_tag }}
-      new_version: ${{ steps.tag_version.outputs.new_version }}
+      deployment_environment: ${{ inputs.environment }}
+      new_version: ${{ steps.extract_tag.outputs.version }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Bump version and push tag
-        id: tag_version
-        uses: mathieudutour/github-tag-action@v6.2
-        with:
-          github_token: ${{ github.token }}
-          release_branches: feature/EK-4-initialize-deploy-project
-          tag_prefix: v
-
-      - name: Create a GitHub release
-        uses: ncipollo/release-action@v1.14.0
-        with:
-          tag: ${{ steps.tag_version.outputs.new_tag }}
-          name: Release ${{ steps.tag_version.outputs.new_tag }}
-          body: ${{ steps.tag_version.outputs.changelog }}
-
-  build-backend:
-    needs: [prepare-variables]
-    runs-on: ubuntu-latest
-    environment: ${{ needs.prepare-variables.outputs.deployment_environment }}
-    defaults:
-      run:
-        shell: bash
-    steps:
-      - name: print backend_image_tag
-        run: echo "${{ secrets.ACR_LOGIN_SERVER }}/expense-lens-service:${{ needs.prepare-variables.outputs.new_tag }}"
-
-      - name: 'Checkout GitHub Action'
-        uses: actions/checkout@v4
-
-      - name: OIDC Login to Azure Public Cloud with AzPowershell (enableAzPSSession true)
-        uses: azure/login@v2.1.1
-        with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          enable-AzPSSession: true
-
-      - name: Docker login
-        uses: azure/docker-login@v1
-        with:
-          login-server: ${{ secrets.ACR_LOGIN_SERVER }}
-          username: ${{ secrets.ACR_USERNAME }}
-          password: ${{ secrets.ACR_PASSWORD }}
-
-      - name: Build & push Docker image
-        id: backend_image
-        uses: docker/build-push-action@v2
-        with:
-          tags: ${{ secrets.ACR_LOGIN_SERVER }}/expense-lens-service:${{ needs.prepare-variables.outputs.new_tag }}
-          push: true
-          context: .
-          file: ./Dockerfile_Backend
+      # github.ref will be 'refs/tags/v0.0.x, we want the v0.0.x
+      - name: Extract version from tag
+        run: |
+          echo "version=${GITHUB_REF##*/v}" >> "$GITHUB_OUTPUT"
+          echo "The version is ${GITHUB_REF##*/v}"
+        id: extract_tag
 
   deploy-pulumi:
     runs-on: ubuntu-latest
     environment: ${{ needs.prepare-variables.outputs.deployment_environment }}
     name: Deploy ExpenseLens Pulumi
-    needs: [ prepare-variables, build-backend ]
+    needs: [prepare-variables]
     defaults:
       run:
         shell: bash
     env:
-      BACKEND_IMAGE_TAG: ${{ needs.prepare-variables.outputs.backend_image_tag }}
+      BACKEND_IMAGE_TAG: ${{ secrets.ACR_LOGIN_SERVER }}/expense-lens-service:${{ needs.prepare-variables.outputs.new_version }}
     steps:
       - name: 'Checkout GitHub Action'
         uses: actions/checkout@v4
@@ -122,7 +80,10 @@ jobs:
     environment: ${{ needs.prepare-variables.outputs.deployment_environment }}
     needs: [prepare-variables, deploy-pulumi]
     name: Deploy to FunctionApp ${{ vars.AZURE_FUNCTIONAPP_NAME }}
-#    if: ${{ vars.AZURE_FUNCTIONAPP_NAME != '' }}
+    env:
+      AZURE_FUNCTIONAPP_PACKAGE_PATH: '.'       # set this to the path to your function app project, defaults to the repository root
+      DOTNET_VERSION: '8.0.x'                   # set this to the dotnet version to use (e.g. '2.1.x', '3.1.x', '5.0.x')
+    #    if: ${{ vars.AZURE_FUNCTIONAPP_NAME != '' }}
     steps:
       - name: 'Checkout GitHub Action'
         uses: actions/checkout@v4
@@ -146,3 +107,4 @@ jobs:
           app-name: ${{ vars.AZURE_FUNCTIONAPP_NAME }}
           package: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/Publish'
           publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
+
