feat: add pulumi deployment (#1)

--- a/Dockerfile_Backend
+++ b/Dockerfile_Backend
@@ -4,7 +4,7 @@ WORKDIR /App
 EXPOSE 8080
 EXPOSE 8081
 # Copy everything
-COPY . ./
+COPY ./src/BackendService ./
 # Restore as distinct layers
 RUN dotnet restore
 # Build and publish a release
