--- a/.gitignore
+++ b/.gitignore
@@ -136,5 +136,6 @@ _NCrunch*
 .idea
 
 # Local settings
+src/BackendService/Properties/*
 src/BackendService/Properties/launchSettings.json
 launchSettings.json
