--- a/deploy/ExpenseLens/ExpenseLens.csproj
+++ b/deploy/ExpenseLens/ExpenseLens.csproj
@@ -10,7 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Pulumi" Version="3.63.1" />
-    <PackageReference Include="Pulumi.AzureNative" Version="2.*" />
+    <PackageReference Include="Pulumi.AzureNative" Version="2.44.1" />
   </ItemGroup>
 
   <ItemGroup>
