--- a/src/BackendService/BackendService.csproj
+++ b/src/BackendService/BackendService.csproj
@@ -11,6 +11,7 @@
         <PackageReference Include="Azure.AI.FormRecognizer" Version="4.1.0" />
         <PackageReference Include="Azure.Storage.Blobs" Version="12.19.1" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.4"/>
+        <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.41.0" />
         <PackageReference Include="OneOf" Version="3.0.263" />
         <PackageReference Include="Scrutor" Version="4.2.2" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
