--- a/.github/workflows/release-development.yaml
+++ b/.github/workflows/release-development.yaml
@@ -1,5 +1,7 @@
 name: Deploy ExpenseLens to development environment
-on: [push]
+on:
+  push:
+    branches: ["main"]
 
 permissions:
   id-token: write
