--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -40,8 +40,6 @@ jobs:
     defaults:
       run:
         shell: bash
-    env:
-      BACKEND_IMAGE_TAG: ${{ secrets.ACR_LOGIN_SERVER }}/expense-lens-service:${{ needs.prepare-variables.outputs.new_version }}
     steps:
       - name: 'Checkout GitHub Action'
         uses: actions/checkout@v4
@@ -60,7 +58,7 @@ jobs:
       - uses: pulumi/actions@v5.2.3
         name: Deploy infrastructure to development
         env:
-          BACKEND_SERVICE_IMAGE_TAG: $BACKEND_IMAGE_TAG
+          BACKEND_SERVICE_IMAGE_TAG: ${{ secrets.ACR_LOGIN_SERVER }}/expense-lens-service:${{ needs.prepare-variables.outputs.new_version }}
           AZURE_STORAGE_ACCOUNT: ${{ secrets.PULUMI_AZURE_STORAGE_ACCOUNT }}
           AZURE_STORAGE_KEY: ${{ secrets.PULUMI_AZURE_STORAGE_KEY }}
           ARM_USE_OIDC: true
