Add app insights

--- a/src/BackendService/BackendService.csproj
+++ b/src/BackendService/BackendService.csproj
@@ -10,6 +10,7 @@
         <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0" />
         <PackageReference Include="Azure.AI.FormRecognizer" Version="4.1.0" />
         <PackageReference Include="Azure.Storage.Blobs" Version="12.19.1" />
+        <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.22.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.4"/>
         <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.41.0" />
         <PackageReference Include="OneOf" Version="3.0.263" />
