--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -29,7 +29,7 @@ jobs:
       - name: Extract version from tag
         run: |
           echo "version=v${GITHUB_REF##*/v}" >> "$GITHUB_OUTPUT"
-          echo "The version is ${GITHUB_REF##*/v}"
+          echo "The version is v${GITHUB_REF##*/v}"
         id: extract_tag
 
   deploy-pulumi:
