--- a/src/BackendService/appsettings.Development.json
+++ b/src/BackendService/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Information"
     }
+  },
+  "ApplicationInsights": {
+    "LogLevel": {
+      "Default": "Debug"
+    }
   }
 }
