--- a/src/BackendService/appsettings.json
+++ b/src/BackendService/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Information"
     }
   },
+  "ApplicationInsights": {
+    "LogLevel": {
+      "Default": "Debug"
+    }
+  },
   "AllowedHosts": "*"
 }
