--- a/src/BackendService/BackendService.csproj
+++ b/src/BackendService/BackendService.csproj
@@ -16,6 +16,8 @@
         <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.41.0" />
         <PackageReference Include="OneOf" Version="3.0.263" />
         <PackageReference Include="Scrutor" Version="4.2.2" />
+        <PackageReference Include="Serilog" Version="4.0.0" />
+        <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
 
