--- a/src/BackendService/BackendService.csproj
+++ b/src/BackendService/BackendService.csproj
@@ -18,6 +18,7 @@
         <PackageReference Include="Scrutor" Version="4.2.2" />
         <PackageReference Include="Serilog" Version="4.0.0" />
         <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
+        <PackageReference Include="Serilog.Sinks.ApplicationInsights" Version="4.0.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
 
